k8s/ingress-controller.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: k8s
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30100
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30101
  selector:
    app.kubernetes.io/name: ingress-nginx
  type: NodePort
