k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: k8s
spec:
  rules:
    #- host: api-er-stage-7ewm7tqwq6.op.gg
    - http:
        paths:
          - path: /cat
            pathType: Prefix
            backend:
              service:
                name: cat-api
                port:
                  number: 80
          - path: /dog
            pathType: Prefix
            backend:
              service:
                name: dog-api
                port:
                  number: 80
